--- a/about.html
+++ b/about.html
@@ -245,7 +245,7 @@
 
       <!-- footer start -->
       <footer class="mobile-footer">
-        <img src="/SVG/gte-ahmedabad-2023.jpg" />
+        <img src="SVG/gte-ahmedabad-2023.jpg" />
         <h6>(2023 GTE) All Rights Reserved</h6>
       </footer>
     </div>
