--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
           <div class="logo_img">
             <a href="#">
               <img
-                src="/SVG/gte-ahmedabad-2023.jpg"
+                src="SVG/gte-ahmedabad-2023.jpg"
                 alt="logo of GTE Global summit 2023"
                 height="200px"
             /></a>
