changes after review

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
               src="SVG/hamburger-menu.svg"
               class="menuIcon hamburger"
               name="hamburger"
+              alt="menu"
             />
             <img
               src="SVG/cross.svg"
               class="menuIcon closebtn"
               id="cross"
               name="cross"
+              alt="menu"
             />
           </div>
           <div class="navlinks">
@@ -54,7 +56,7 @@
                 </li>
                 <li>
                   <a href="" class="socialHeader-links">
-                    <img src="SVG/icons8-twitter.svg" alt="" />
+                    <img src="SVG/icons8-twitter.svg" alt="icon" />
                   </a>
                 </li>
                 <li><a href="#" class="socialHeader-links">English </a></li>
@@ -64,7 +66,7 @@
             </div>
             <div class="mainHeader">
               <div class="logo">
-                <img src="SVG/gte-ahmedabad-2023.jpg" alt="" />
+                <img src="SVG/gte-ahmedabad-2023.jpg" alt="logo" />
               </div>
               <ul class="menuList">
                 <li><a href="about.html" class="scroll-links">About</a></li>
@@ -185,7 +187,7 @@
 
       <!-- footer start -->
       <footer class="mobile-footer">
-        <img src="SVG/gte-ahmedabad-2023.jpg" />
+        <img src="SVG/gte-ahmedabad-2023.jpg" alt="logo footer" />
         <h6>(2023 GTE) All Rights Reserved</h6>
       </footer>
     </div>
