--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               alt="menu"
             />
           </div>
-          <div class="navlinks">
+          <nav class="navlinks">
             <ul class="menuList">
               <li class="navItem"><a href="about.html">about</a></li>
               <li class="navItem"><a href="#contact">Contact</a></li>
@@ -44,7 +44,7 @@
               <li class="navItem"><a href="#sponser">Sponser</a></li>
               <li class="navItem box"><a href="#">DY Campaign</a></li>
             </ul>
-          </div>
+          </nav>
 
           <div class="navbar-dt">
             <div class="socialHeader">
