--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
           <div class="navlinks">
             <ul class="menuList">
-              <li class="navItem"><a href="about.html">about</a></li>
+              <li class="navItem"><a href="about.html">About</a></li>
               <li class="navItem"><a href="#contact">Contact</a></li>
               <li class="navItem"><a href="#logo">Logo</a></li>
               <li class="navItem"><a href="#photos">Photos</a></li>
